syntax = 'proto3';

package pb;

message TestObject {
  string query = 1;
  int64 page_number = 2;
  int64 result_per_page = 3;
  bool flag = 4;
  float score = 5;
  repeated TestNested list = 6;
  map<int64, TestNested> map = 7;
  TestNested nested = 8;
}

message TestNested {
    string title = 1;
}